com.ca.lsp.cobol/lsp-service-cobol/src/test/java/com/ca/lsp/cobol/usecases/engine/parser/TestPreprocessorParser.java
/*
 * Copyright (c) 2020 Broadcom.
 * The term "Broadcom" refers to Broadcom Inc. and/or its subsidiaries.
 *
 * This program and the accompanying materials are made
 * available under the terms of the Eclipse Public License 2.0
 * which is available at https://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *    Broadcom, Inc. - initial API and implementation
 *
 */

/*
 * Copyright (c) 2020 Broadcom.
 * The term "Broadcom" refers to Broadcom Inc. and/or its subsidiaries.
 *
 * This program and the accompanying materials are made
 * available under the terms of the Eclipse Public License 2.0
 * which is available at https://www.eclipse.org/legal/epl-2.0/
 *
 * SPDX-License-Identifier: EPL-2.0
 *
 * Contributors:
 *    Broadcom, Inc. - initial API and implementation
 *
 */

package com.ca.lsp.cobol.usecases.engine.parser;
// Generated from .\TestPreprocessor.g4 by ANTLR 4.7.2

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TestPreprocessorParser extends Parser {
  static {
    RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
  }

  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  public static final int START = 1,
      STOP = 2,
      VARIABLEDEFINITION = 3,
      VARIABLEUSAGE = 4,
      PARAGRPHDEFINITION = 5,
      PARAGRPHUSAGE = 6,
      COPYBOOKDEFINITION = 7,
      COPYBOOKUSAGE = 8,
      DIAGNOSTICSTART = 9,
      REPLACEMENTSTART = 10,
      MULTITOKENSTART = 11,
      MULTITOKENSTOP = 12,
      STRINGLITERAL = 13,
      IDENTIFIER = 14,
      COPYBOOKNAME = 15,
      NEWLINE = 16,
      WS = 17,
      TEXT = 18,
      SEPARATOR = 19;
  public static final int RULE_startRule = 0,
      RULE_multiTokenError = 1,
      RULE_multiToken = 2,
      RULE_errorStatement = 3,
      RULE_copybookStatement = 4,
      RULE_copybookUsage = 5,
      RULE_copybookDefinition = 6,
      RULE_variableStatement = 7,
      RULE_variableUsage = 8,
      RULE_variableDefinition = 9,
      RULE_paragraphStatement = 10,
      RULE_paragraphUsage = 11,
      RULE_paragraphDefinition = 12,
      RULE_diagnostic = 13,
      RULE_word = 14,
      RULE_replacement = 15,
      RULE_identifier = 16,
      RULE_cpyIdentifier = 17,
      RULE_cpyName = 18;

  private static String[] makeRuleNames() {
    return new String[] {
      "startRule",
      "multiTokenError",
      "multiToken",
      "errorStatement",
      "copybookStatement",
      "copybookUsage",
      "copybookDefinition",
      "variableStatement",
      "variableUsage",
      "variableDefinition",
      "paragraphStatement",
      "paragraphUsage",
      "paragraphDefinition",
      "diagnostic",
      "word",
      "replacement",
      "identifier",
      "cpyIdentifier",
      "cpyName"
    };
  }

  public static final String[] ruleNames = makeRuleNames();

  private static String[] makeLiteralNames() {
    return new String[] {
      null, "'{'", "'}'", null, null, null, null, null, null, "'|'", "'^'", null, null, null, null,
      null, null, null, null, "', '"
    };
  }

  private static final String[] _LITERAL_NAMES = makeLiteralNames();

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      "START",
      "STOP",
      "VARIABLEDEFINITION",
      "VARIABLEUSAGE",
      "PARAGRPHDEFINITION",
      "PARAGRPHUSAGE",
      "COPYBOOKDEFINITION",
      "COPYBOOKUSAGE",
      "DIAGNOSTICSTART",
      "REPLACEMENTSTART",
      "MULTITOKENSTART",
      "MULTITOKENSTOP",
      "STRINGLITERAL",
      "IDENTIFIER",
      "COPYBOOKNAME",
      "NEWLINE",
      "WS",
      "TEXT",
      "SEPARATOR"
    };
  }

  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  /** @deprecated Use {@link #VOCABULARY} instead. */
  @Deprecated public static final String[] tokenNames;

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getGrammarFileName() {
    return "TestPreprocessor.g4";
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public TestPreprocessorParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  public static class StartRuleContext extends ParserRuleContext {
    public TerminalNode EOF() {
      return getToken(TestPreprocessorParser.EOF, 0);
    }

    public List<CopybookStatementContext> copybookStatement() {
      return getRuleContexts(CopybookStatementContext.class);
    }

    public CopybookStatementContext copybookStatement(int i) {
      return getRuleContext(CopybookStatementContext.class, i);
    }

    public List<VariableStatementContext> variableStatement() {
      return getRuleContexts(VariableStatementContext.class);
    }

    public VariableStatementContext variableStatement(int i) {
      return getRuleContext(VariableStatementContext.class, i);
    }

    public List<ParagraphStatementContext> paragraphStatement() {
      return getRuleContexts(ParagraphStatementContext.class);
    }

    public ParagraphStatementContext paragraphStatement(int i) {
      return getRuleContext(ParagraphStatementContext.class, i);
    }

    public List<ErrorStatementContext> errorStatement() {
      return getRuleContexts(ErrorStatementContext.class);
    }

    public ErrorStatementContext errorStatement(int i) {
      return getRuleContext(ErrorStatementContext.class, i);
    }

    public List<MultiTokenErrorContext> multiTokenError() {
      return getRuleContexts(MultiTokenErrorContext.class);
    }

    public MultiTokenErrorContext multiTokenError(int i) {
      return getRuleContext(MultiTokenErrorContext.class, i);
    }

    public List<TerminalNode> NEWLINE() {
      return getTokens(TestPreprocessorParser.NEWLINE);
    }

    public TerminalNode NEWLINE(int i) {
      return getToken(TestPreprocessorParser.NEWLINE, i);
    }

    public StartRuleContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_startRule;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterStartRule(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitStartRule(this);
    }
  }

  public final StartRuleContext startRule() throws RecognitionException {
    StartRuleContext _localctx = new StartRuleContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_startRule);
    int _la;
    try {
      int _alt;
      enterOuterAlt(_localctx, 1);
      {
        setState(41);
        _errHandler.sync(this);
        _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
        while (_alt != 1 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
          if (_alt == 1 + 1) {
            {
              {
                setState(38);
                matchWildcard();
              }
            }
          }
          setState(43);
          _errHandler.sync(this);
          _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
        }
        setState(60);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            {
              setState(50);
              _errHandler.sync(this);
              _alt = 1;
              do {
                switch (_alt) {
                  case 1:
                    {
                      setState(50);
                      _errHandler.sync(this);
                      switch (_input.LA(1)) {
                        case COPYBOOKDEFINITION:
                        case COPYBOOKUSAGE:
                          {
                            setState(44);
                            copybookStatement();
                          }
                          break;
                        case VARIABLEDEFINITION:
                        case VARIABLEUSAGE:
                          {
                            setState(45);
                            variableStatement();
                          }
                          break;
                        case PARAGRPHDEFINITION:
                        case PARAGRPHUSAGE:
                          {
                            setState(46);
                            paragraphStatement();
                          }
                          break;
                        case START:
                          {
                            setState(47);
                            errorStatement();
                          }
                          break;
                        case MULTITOKENSTART:
                          {
                            setState(48);
                            multiTokenError();
                          }
                          break;
                        case NEWLINE:
                          {
                            setState(49);
                            match(NEWLINE);
                          }
                          break;
                        default:
                          throw new NoViableAltException(this);
                      }
                    }
                    break;
                  default:
                    throw new NoViableAltException(this);
                }
                setState(52);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
              } while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER);
              setState(57);
              _errHandler.sync(this);
              _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
              while (_alt != 1 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                if (_alt == 1 + 1) {
                  {
                    {
                      setState(54);
                      matchWildcard();
                    }
                  }
                }
                setState(59);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 3, _ctx);
              }
            }
          }
          setState(62);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while ((((_la) & ~0x3f) == 0
            && ((1L << _la)
                    & ((1L << START)
                        | (1L << VARIABLEDEFINITION)
                        | (1L << VARIABLEUSAGE)
                        | (1L << PARAGRPHDEFINITION)
                        | (1L << PARAGRPHUSAGE)
                        | (1L << COPYBOOKDEFINITION)
                        | (1L << COPYBOOKUSAGE)
                        | (1L << MULTITOKENSTART)
                        | (1L << NEWLINE)))
                != 0));
        setState(64);
        match(EOF);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MultiTokenErrorContext extends ParserRuleContext {
    public TerminalNode MULTITOKENSTART() {
      return getToken(TestPreprocessorParser.MULTITOKENSTART, 0);
    }

    public MultiTokenContext multiToken() {
      return getRuleContext(MultiTokenContext.class, 0);
    }

    public TerminalNode MULTITOKENSTOP() {
      return getToken(TestPreprocessorParser.MULTITOKENSTOP, 0);
    }

    public List<DiagnosticContext> diagnostic() {
      return getRuleContexts(DiagnosticContext.class);
    }

    public DiagnosticContext diagnostic(int i) {
      return getRuleContext(DiagnosticContext.class, i);
    }

    public MultiTokenErrorContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_multiTokenError;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterMultiTokenError(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitMultiTokenError(this);
    }
  }

  public final MultiTokenErrorContext multiTokenError() throws RecognitionException {
    MultiTokenErrorContext _localctx = new MultiTokenErrorContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_multiTokenError);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(66);
        match(MULTITOKENSTART);
        setState(67);
        multiToken();
        setState(71);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == DIAGNOSTICSTART) {
          {
            {
              setState(68);
              diagnostic();
            }
          }
          setState(73);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(74);
        match(MULTITOKENSTOP);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class MultiTokenContext extends ParserRuleContext {
    public List<WordContext> word() {
      return getRuleContexts(WordContext.class);
    }

    public WordContext word(int i) {
      return getRuleContext(WordContext.class, i);
    }

    public List<CopybookStatementContext> copybookStatement() {
      return getRuleContexts(CopybookStatementContext.class);
    }

    public CopybookStatementContext copybookStatement(int i) {
      return getRuleContext(CopybookStatementContext.class, i);
    }

    public List<VariableStatementContext> variableStatement() {
      return getRuleContexts(VariableStatementContext.class);
    }

    public VariableStatementContext variableStatement(int i) {
      return getRuleContext(VariableStatementContext.class, i);
    }

    public List<ParagraphStatementContext> paragraphStatement() {
      return getRuleContexts(ParagraphStatementContext.class);
    }

    public ParagraphStatementContext paragraphStatement(int i) {
      return getRuleContext(ParagraphStatementContext.class, i);
    }

    public List<ErrorStatementContext> errorStatement() {
      return getRuleContexts(ErrorStatementContext.class);
    }

    public ErrorStatementContext errorStatement(int i) {
      return getRuleContext(ErrorStatementContext.class, i);
    }

    public List<MultiTokenErrorContext> multiTokenError() {
      return getRuleContexts(MultiTokenErrorContext.class);
    }

    public MultiTokenErrorContext multiTokenError(int i) {
      return getRuleContext(MultiTokenErrorContext.class, i);
    }

    public MultiTokenContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_multiToken;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterMultiToken(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitMultiToken(this);
    }
  }

  public final MultiTokenContext multiToken() throws RecognitionException {
    MultiTokenContext _localctx = new MultiTokenContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_multiToken);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(82);
        _errHandler.sync(this);
        _la = _input.LA(1);
        do {
          {
            setState(82);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
              case IDENTIFIER:
                {
                  setState(76);
                  word();
                }
                break;
              case COPYBOOKDEFINITION:
              case COPYBOOKUSAGE:
                {
                  setState(77);
                  copybookStatement();
                }
                break;
              case VARIABLEDEFINITION:
              case VARIABLEUSAGE:
                {
                  setState(78);
                  variableStatement();
                }
                break;
              case PARAGRPHDEFINITION:
              case PARAGRPHUSAGE:
                {
                  setState(79);
                  paragraphStatement();
                }
                break;
              case START:
                {
                  setState(80);
                  errorStatement();
                }
                break;
              case MULTITOKENSTART:
                {
                  setState(81);
                  multiTokenError();
                }
                break;
              default:
                throw new NoViableAltException(this);
            }
          }
          setState(84);
          _errHandler.sync(this);
          _la = _input.LA(1);
        } while ((((_la) & ~0x3f) == 0
            && ((1L << _la)
                    & ((1L << START)
                        | (1L << VARIABLEDEFINITION)
                        | (1L << VARIABLEUSAGE)
                        | (1L << PARAGRPHDEFINITION)
                        | (1L << PARAGRPHUSAGE)
                        | (1L << COPYBOOKDEFINITION)
                        | (1L << COPYBOOKUSAGE)
                        | (1L << MULTITOKENSTART)
                        | (1L << IDENTIFIER)))
                != 0));
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class ErrorStatementContext extends ParserRuleContext {
    public TerminalNode START() {
      return getToken(TestPreprocessorParser.START, 0);
    }

    public TerminalNode STOP() {
      return getToken(TestPreprocessorParser.STOP, 0);
    }

    public TerminalNode STRINGLITERAL() {
      return getToken(TestPreprocessorParser.STRINGLITERAL, 0);
    }

    public WordContext word() {
      return getRuleContext(WordContext.class, 0);
    }

    public TerminalNode TEXT() {
      return getToken(TestPreprocessorParser.TEXT, 0);
    }

    public List<DiagnosticContext> diagnostic() {
      return getRuleContexts(DiagnosticContext.class);
    }

    public DiagnosticContext diagnostic(int i) {
      return getRuleContext(DiagnosticContext.class, i);
    }

    public ErrorStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_errorStatement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterErrorStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitErrorStatement(this);
    }
  }

  public final ErrorStatementContext errorStatement() throws RecognitionException {
    ErrorStatementContext _localctx = new ErrorStatementContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_errorStatement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(86);
        match(START);
        setState(90);
        _errHandler.sync(this);
        switch (_input.LA(1)) {
          case STRINGLITERAL:
            {
              setState(87);
              match(STRINGLITERAL);
            }
            break;
          case IDENTIFIER:
            {
              setState(88);
              word();
            }
            break;
          case TEXT:
            {
              setState(89);
              match(TEXT);
            }
            break;
          case STOP:
          case DIAGNOSTICSTART:
            break;
          default:
            break;
        }
        setState(95);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == DIAGNOSTICSTART) {
          {
            {
              setState(92);
              diagnostic();
            }
          }
          setState(97);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(98);
        match(STOP);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class CopybookStatementContext extends ParserRuleContext {
    public TerminalNode STOP() {
      return getToken(TestPreprocessorParser.STOP, 0);
    }

    public CopybookUsageContext copybookUsage() {
      return getRuleContext(CopybookUsageContext.class, 0);
    }

    public CopybookDefinitionContext copybookDefinition() {
      return getRuleContext(CopybookDefinitionContext.class, 0);
    }

    public List<DiagnosticContext> diagnostic() {
      return getRuleContexts(DiagnosticContext.class);
    }

    public DiagnosticContext diagnostic(int i) {
      return getRuleContext(DiagnosticContext.class, i);
    }

    public CopybookStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_copybookStatement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterCopybookStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitCopybookStatement(this);
    }
  }

  public final CopybookStatementContext copybookStatement() throws RecognitionException {
    CopybookStatementContext _localctx = new CopybookStatementContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_copybookStatement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(102);
        _errHandler.sync(this);
        switch (_input.LA(1)) {
          case COPYBOOKUSAGE:
            {
              setState(100);
              copybookUsage();
            }
            break;
          case COPYBOOKDEFINITION:
            {
              setState(101);
              copybookDefinition();
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
        setState(107);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == DIAGNOSTICSTART) {
          {
            {
              setState(104);
              diagnostic();
            }
          }
          setState(109);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(110);
        match(STOP);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class CopybookUsageContext extends ParserRuleContext {
    public TerminalNode COPYBOOKUSAGE() {
      return getToken(TestPreprocessorParser.COPYBOOKUSAGE, 0);
    }

    public CpyIdentifierContext cpyIdentifier() {
      return getRuleContext(CpyIdentifierContext.class, 0);
    }

    public CopybookUsageContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_copybookUsage;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterCopybookUsage(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitCopybookUsage(this);
    }
  }

  public final CopybookUsageContext copybookUsage() throws RecognitionException {
    CopybookUsageContext _localctx = new CopybookUsageContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_copybookUsage);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(112);
        match(COPYBOOKUSAGE);
        setState(113);
        cpyIdentifier();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class CopybookDefinitionContext extends ParserRuleContext {
    public TerminalNode COPYBOOKDEFINITION() {
      return getToken(TestPreprocessorParser.COPYBOOKDEFINITION, 0);
    }

    public CpyIdentifierContext cpyIdentifier() {
      return getRuleContext(CpyIdentifierContext.class, 0);
    }

    public CopybookDefinitionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_copybookDefinition;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterCopybookDefinition(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitCopybookDefinition(this);
    }
  }

  public final CopybookDefinitionContext copybookDefinition() throws RecognitionException {
    CopybookDefinitionContext _localctx = new CopybookDefinitionContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_copybookDefinition);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(115);
        match(COPYBOOKDEFINITION);
        setState(116);
        cpyIdentifier();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VariableStatementContext extends ParserRuleContext {
    public TerminalNode STOP() {
      return getToken(TestPreprocessorParser.STOP, 0);
    }

    public VariableUsageContext variableUsage() {
      return getRuleContext(VariableUsageContext.class, 0);
    }

    public VariableDefinitionContext variableDefinition() {
      return getRuleContext(VariableDefinitionContext.class, 0);
    }

    public List<DiagnosticContext> diagnostic() {
      return getRuleContexts(DiagnosticContext.class);
    }

    public DiagnosticContext diagnostic(int i) {
      return getRuleContext(DiagnosticContext.class, i);
    }

    public VariableStatementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_variableStatement;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterVariableStatement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitVariableStatement(this);
    }
  }

  public final VariableStatementContext variableStatement() throws RecognitionException {
    VariableStatementContext _localctx = new VariableStatementContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_variableStatement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(120);
        _errHandler.sync(this);
        switch (_input.LA(1)) {
          case VARIABLEUSAGE:
            {
              setState(118);
              variableUsage();
            }
            break;
          case VARIABLEDEFINITION:
            {
              setState(119);
              variableDefinition();
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
        setState(125);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == DIAGNOSTICSTART) {
          {
            {
              setState(122);
              diagnostic();
            }
          }
          setState(127);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(128);
        match(STOP);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VariableUsageContext extends ParserRuleContext {
    public TerminalNode VARIABLEUSAGE() {
      return getToken(TestPreprocessorParser.VARIABLEUSAGE, 0);
    }

    public WordContext word() {
      return getRuleContext(WordContext.class, 0);
    }

    public VariableUsageContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_variableUsage;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterVariableUsage(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitVariableUsage(this);
    }
  }

  public final VariableUsageContext variableUsage() throws RecognitionException {
    VariableUsageContext _localctx = new VariableUsageContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_variableUsage);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(130);
        match(VARIABLEUSAGE);
        setState(131);
        word();
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class VariableDefinitionContext extends ParserRuleContext {
    public TerminalNode VARIABLEDEFINITION() {
      return getToken(TestPreprocessorParser.VARIABLEDEFINITION, 0);
    }

    public WordContext word() {
      return getRuleContext(WordContext.class, 0);
    }

    public VariableDefinitionContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    @Override
    public int getRuleIndex() {
      return RULE_variableDefinition;
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).enterVariableDefinition(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof TestPreprocessorListener)
        ((TestPreprocessorListener) listener).exitVariableDefinition(this);
    }
  }
